fix/style: corrige hierarquia de decisao de botões dos cards de projetos e corrige overflow da secao de linha do tempo

--- a/assets/css/about-me.css
+++ b/assets/css/about-me.css
@@ -14,7 +14,7 @@
   /* border: 1px dashed rgb(0, 132, 255); */
 }
 #about-me h2 {
-  font-size: 6.4rem;
+  font-size: 4.2rem;
 }
 #about-me p {
   width: 30%;
